<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="293dp"
        tools:src="@drawable/logo" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Food_Button"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="97dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/News_Button"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="97dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Movie_Button"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="356dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bus_Button"
        tools:layout_editor_absoluteX="244dp"
        tools:layout_editor_absoluteY="356dp" />

</LinearLayout>